--- a/htmlbb.html.html
+++ b/htmlbb.html.html
@@ -130,7 +130,7 @@ r i{
 
 <div class="col-sm-12 col-lg-3">
 <div class="form group form-group-lg">
-<lable for="प्रवासाचे कारण : *">प्रवासाचे कारण : *</lable> 
+<lable for="प्रवासाचे कारण : *">प्रवासाचे कारणb : *</lable> 
 <select class="form-control">
 <option value="Select Travel Type">Select Travel Type</option>
 <option value="Death Of First Relative">Death Of First Relative</option>
